--- a/resources/scss/partials/_footer.scss
+++ b/resources/scss/partials/_footer.scss
@@ -1,1 +1,18 @@
 
+footer {
+    height: 80px;
+    .container {
+        display: flex;
+        justify-content: space-between;
+        height: 100%;
+        ul {
+            height: 100%;
+            display: flex;
+            align-items: center;
+            li {
+                display: inline-block;
+                margin-right: 20px;
+            }
+        }
+    }
+}
