--- a/resources/scss/partials/_main.scss
+++ b/resources/scss/partials/_main.scss
@@ -1,5 +1,7 @@
 main {
+    height: calc(100vh - 160px);
     .cards-wrapper {
+        margin: 30px 0;
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
@@ -9,7 +11,7 @@ main {
             margin: 10px 0;
             overflow: hidden;
             width: 300px;
-            height: 410px;
+            height: 420px;
             position: relative;
             object-fit: contain;
             &:hover img {
@@ -18,7 +20,9 @@ main {
             }
             &:hover .overlay {
                 display: block;
-
+            }
+            &:hover {
+                border: 5px solid purple;
             }
 
             .overlay {
@@ -27,15 +31,35 @@ main {
                 bottom: 0;
                 left: 0;
                 background-color: black;
-                height: 110px;
+                height: 120px;
                 width: 100%;
                 color: white;
 
                 .comic-info {
-                    padding: 5px 10px;
+                    padding: 10px 10px;
+                    .buttons-container{
+                        width: 100%;
+                        button {
+                            color: white;
+                            background: none;
+                            border: 1px solid white
+                        }
+                        button:hover {
+                            color: black;
+                            background: white;
+
+                        }
+                    }
                 }
             }
 
+        }
+    }
+    .show {
+        justify-content: flex-start;
+        .comic-info-show {
+            padding-left: 30px;
+            max-width: 1100px ;
         }
     }
 }
