--- a/resources/scss/partials/_general.scss
+++ b/resources/scss/partials/_general.scss
@@ -98,6 +98,13 @@ body {
     margin: 0 auto;
 }
 
+.alert-success {
+    margin-top: 10px;
+    padding: 20px;
+    border: 1px solid #008000;
+    border-radius: 5px;
+}
+
 .navigator {
     display: flex;
     justify-content: center;
